align markers correctly on the map

--- a/app/styles/map.scss
+++ b/app/styles/map.scss
@@ -1,16 +1,12 @@
 .marker {
   position: absolute;
-  left: -23px;
-  top: 5px;
+  left: -249px;
+  top: -48px;
+  width: 500px;
   font-weight: bold;
   text-align: center;
   text-decoration: none;
   color: #000000;
-
-  img {
-    position: relative;
-    top: -65px;
-  }
 }
 
 .map-hint {
